Lesson-11-Ingress/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Rework by Nyukers, 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /v2021

spec:
  rules:
  - host: web0.adv-it.net
    http:
      paths:
      - pathType: Prefix
        path: "/page1"
        backend:
           service:
             name: main
             port:
               number: 80

  - host: web1.adv-it.net
    http:
      paths:
      - pathType: Prefix
        path: "/page1"
        backend:
           service:
             name: main
             port:
               number: 80

  - host: web2.adv-it.net
    http:
      paths:
      - pathType: Prefix
        path: "/page1"
        backend:
           service:
             name: main
             port:
               number: 80
